--- a/package.json
+++ b/package.json
@@ -9,9 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@alch/alchemy-web3": "^1.3.0",
+    "@chakra-ui/react": "^1.8.8",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@fontsource/open-sans": "^4.5.8",
+    "@fontsource/raleway": "^4.5.5",
+    "@react-spring/parallax": "^9.4.4",
+    "chart.js": "^3.7.1",
+    "framer-motion": "^6",
     "next": "12.1.4",
-    "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react": "17.0.0",
+    "react-chartjs-2": "^4.1.0",
+    "react-d3-library": "^1.1.8",
+    "react-dom": "17.0.0",
+    "react-spring": "^9.4.4"
   },
   "devDependencies": {
     "eslint": "8.12.0",
